crates/stackable-versioned-macros/fixtures/snapshots/stackable_versioned_macros__test__default_snapshots@module.rs.snap
---
source: crates/stackable-versioned-macros/src/lib.rs
expression: formatted
input_file: crates/stackable-versioned-macros/fixtures/inputs/default/module.rs
---
#[automatically_derived]
pub(crate) mod v1alpha1 {
    use super::*;
    pub struct Foo {
        pub bar: usize,
        pub foo: String,
    }
    pub struct Bar {
        pub baz: String,
    }
}
#[automatically_derived]
impl ::std::convert::From<v1alpha1::Foo> for v1::Foo {
    fn from(__sv_foo: v1alpha1::Foo) -> Self {
        Self {
            bar: __sv_foo.bar.into(),
            baz: ::std::default::Default::default(),
            foo: __sv_foo.foo.into(),
        }
    }
}
#[automatically_derived]
impl ::std::convert::From<v1alpha1::Bar> for v1::Bar {
    fn from(__sv_bar: v1alpha1::Bar) -> Self {
        Self { baz: __sv_bar.baz.into() }
    }
}
#[automatically_derived]
pub(crate) mod v1 {
    use super::*;
    pub struct Foo {
        pub bar: usize,
        pub baz: bool,
        pub foo: String,
    }
    pub struct Bar {
        pub baz: String,
    }
}
#[automatically_derived]
#[allow(deprecated)]
impl ::std::convert::From<v1::Foo> for v2alpha1::Foo {
    fn from(__sv_foo: v1::Foo) -> Self {
        Self {
            bar: __sv_foo.bar.into(),
            baz: __sv_foo.baz.into(),
            deprecated_foo: __sv_foo.foo.into(),
        }
    }
}
#[automatically_derived]
impl ::std::convert::From<v1::Bar> for v2alpha1::Bar {
    fn from(__sv_bar: v1::Bar) -> Self {
        Self { baz: __sv_bar.baz.into() }
    }
}
#[automatically_derived]
pub(crate) mod v2alpha1 {
    use super::*;
    pub struct Foo {
        pub bar: usize,
        pub baz: bool,
        #[deprecated]
        pub deprecated_foo: String,
    }
    pub struct Bar {
        pub baz: String,
    }
}
