crates/stackable-versioned-macros/fixtures/snapshots/stackable_versioned_macros__test__default_snapshots@rename.rs.snap
---
source: crates/stackable-versioned-macros/src/lib.rs
expression: formatted
input_file: crates/stackable-versioned-macros/fixtures/inputs/default/rename.rs
---
#[automatically_derived]
mod v1alpha1 {
    use super::*;
    pub struct Foo {
        pub bat: usize,
        pub baz: bool,
    }
}
#[automatically_derived]
impl ::std::convert::From<v1alpha1::Foo> for v1beta1::Foo {
    fn from(__sv_foo: v1alpha1::Foo) -> Self {
        Self {
            bar: __sv_foo.bat,
            baz: __sv_foo.baz,
        }
    }
}
#[automatically_derived]
mod v1beta1 {
    use super::*;
    pub struct Foo {
        pub bar: usize,
        pub baz: bool,
    }
}
#[automatically_derived]
impl ::std::convert::From<v1beta1::Foo> for v1::Foo {
    fn from(__sv_foo: v1beta1::Foo) -> Self {
        Self {
            bar: __sv_foo.bar,
            baz: __sv_foo.baz,
        }
    }
}
#[automatically_derived]
mod v1 {
    use super::*;
    pub struct Foo {
        pub bar: usize,
        pub baz: bool,
    }
}
