crates/stackable-versioned-macros/fixtures/snapshots/stackable_versioned_macros__test__default_snapshots@skip_from_field.rs.snap
---
source: crates/stackable-versioned-macros/src/lib.rs
expression: formatted
input_file: crates/stackable-versioned-macros/fixtures/inputs/default/skip_from_field.rs
---
#[automatically_derived]
pub mod v1alpha1 {
    use super::*;
    pub struct Foo {
        pub baz: bool,
    }
}
#[automatically_derived]
impl ::std::convert::From<v1alpha1::Foo> for v1beta1::Foo {
    fn from(__sv_foo: v1alpha1::Foo) -> Self {
        Self {
            bar: ::std::default::Default::default(),
            baz: __sv_foo.baz.into(),
        }
    }
}
#[automatically_derived]
pub mod v1beta1 {
    use super::*;
    pub struct Foo {
        pub bar: usize,
        pub baz: bool,
    }
}
#[automatically_derived]
pub mod v1 {
    use super::*;
    pub struct Foo {
        #[deprecated = "not needed"]
        pub deprecated_bar: usize,
        pub baz: bool,
    }
}
